# neon-spl-governance

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  docker-compose-test.yml  init-governance.sh  run-tests.sh  solana-run-neon.sh  testing-keypairs.cfg  testing.cfg
.buildkite/: pipeline.yml
.buildkite/steps/: build-image.sh  deploy-tests.sh  publish-image.sh  upload-image.sh
addin-fixed-weights/mainnet/: Cargo.toml
addin-fixed-weights/mainnet/src/: lib.rs
addin-fixed-weights/program/: Cargo.toml
addin-fixed-weights/program/src/: config.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
addin-fixed-weights/program/tests/: functional.rs
addin-vesting/: README.md
addin-vesting/cli/: Cargo.toml
addin-vesting/cli/src/: main.rs
addin-vesting/program/: Cargo.toml
addin-vesting/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  max_voter_weight.rs  processor.rs  state.rs  token_owner_record.rs  voter_weight.rs
addin-vesting/program/tests/: functional.rs
artifacts/: addin-fixed-weights.keypair  addin-vesting.keypair  buffer.keypair  community-mint.keypair  creator.keypair  creator_token_owner.keypair  delegate.keypair  maintenance.keypair  neon-evm.keypair  payer.keypair  spl-governance.keypair  spl_governance-keypair.json  spl_governance_addin_fixed_weights-keypair.json  spl_governance_addin_vesting-keypair.json  voter5.keypair
artifacts-launchstand-stage0/: addin-fixed-weights.keypair  addin-vesting.keypair  community-mint.keypair  creator.keypair  keyNBBcjcqbTGiEyihcS6FodYh68sPkWs6RG5yfLDCN.json  maintenance.keypair  neon-evm.keypair  payer.keypair  spl-governance.keypair
artifacts-launchstand-stage0/voters/: tstnGPJyiQMUJqZxqvK4857xeWp7ZrczqZwsf4SB7R8.json
artifacts-launchstand-stage1/: addin-fixed-weights.keypair  addin-vesting.keypair  community-mint.keypair  creator.keypair  keyBcYtD2h6PTWvx8Ewwrak2w72hoM5VdBNbwNqwmuX.json  maintenance.keypair  neon-evm.keypair  payer.keypair  spl-governance.keypair
artifacts-launchstand-stage1/voters/: tstzQJwDhrPNSmqtV5rmC26xbbeBf56xFz9wpyTV7tW.json  voter2.keypair  voter3.keypair  voter7.keypair
artifacts-pubkey/: addin-fixed-weights.pubkey  addin-vesting.pubkey  community-mint.pubkey  creator.pubkey  neon-evm.pubkey  payer.keypair  spl-governance.pubkey
artifacts/voters/: tst18qx7Kd3ELAsM3Qxn4nKNRZeg26Zi7GKGHaeWFm6.keypair  tst6RG7t1J8XN3NYLNHkA3acfZcjurhurG7Kk3gAw9k.json  tst6YyNdi4nGhHAew2N9GKLfVE2gp99y4y4XNAo52qs.json  tstCUGzLUYcuuDVGgAzwi334fDhDS2asqHqcurDqhrS.keypair  tstD4uLc8NE7JYXgKdamx8f3JpC3usDLcbiyDpdbrxJ.keypair  tstKY6DqH9u7uwVw2qa3pgfJNoKWm12e82JRuccBwvV.keypair  tstPSu5sHGrZQraZ3Ef8MFmeSfKWxQSwQQviv7cYWwb.keypair  tstTLYLzy9Q5meFUmhhiXfnaGai96hc7Ludu3gQz8nh.json  tstUPDM1tDgRgC8KALbXQ3hJeKQQTxDywyDVvxv51Lu.keypair  tstVEdAx9DpjzGefNDMEYV6fxasM5QFBZsssadZn3SB.json  voter1.keypair  voter4.keypair  voter6.keypair
governance-lib/: Cargo.toml
governance-lib/src/: addin_fixed_weights.rs  addin_vesting.rs  client.rs  errors.rs  governance.rs  lib.rs  proposal.rs  realm.rs  token_owner.rs
governance-test-scripts/: Cargo.toml  README.md  community_mint.keypair
governance-test-scripts/src/: commands.rs  errors.rs  helpers.rs  main.rs  msig.rs  tokens.rs  wallet.rs
launch-script/: Cargo.toml  README.md  community_mint.keypair  governance.keypair
launch-script/src/: clap_utils.rs  config.rs  config_file.rs  errors.rs  helpers.rs  lockup.rs  main.rs  msig.rs  process.rs  schedule_creator.rs  token_distribution.rs  tokens.rs  wallet.rs
launch-script/src/env/: dao.rs  evm.rs  mod.rs
launch-script/src/process/: dao.rs
launch-script/src/proposals/: create_treasury_pool.rs  create_upgrade_evm.rs  deploy_evm_loader_from_buffer.rs  mod.rs  proposal_delegate_vote.rs  proposal_tge.rs  proposal_transfer.rs  proposal_upgrade_program.rs  proposal_vote_proposal.rs  set_mint_auth.rs  set_transfer_auth.rs
maintenance-test-scripts/: Cargo.toml
maintenance-test-scripts/src/: main.rs
maintenance/program/: Cargo.toml
maintenance/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
