[package]
name = "maintenance-test-scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0" }
solana-sdk = "1.9"
solana-client = "1.9"
borsh = "0.9.1"
maintenance = { version = "0.1", path = "../maintenance/program" }
