[package]
name = "spl-governance-addin-fixed-weights_mainnet"
version = "0.1.0"
description = "Solana Program Library Governance Voter Weight Addin Program (MainNet)"
authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]
repository = "https://github.com/neonlabsorg/neon-spl-governance/addin-fixed-weights/program"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.10.13"
spl-governance-addin-fixed-weights = { path = "../program", features = [ "mainnet", "no-entrypoint" ] }

[lib]
crate-type = ["cdylib", "lib"]
