[package]
name = "spl-governance-addin-vesting"
version = "0.2.0"
description = "Solana Program Library Governance Addin For Vesting"
authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]
repository = "https://github.com/neonlabsorg/neon-spl-governance/addin-vesting/program"
edition = "2021"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
thiserror = "1.0.23"
num-traits = "0.2"
num-derive = "0.3"
arrayref = "0.3.6"
borsh = "0.9.1"
solana-program = "1.14.7"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.2", features = ["no-entrypoint"] }
spl-governance = { path="../../solana-program-library/governance/program", features = ["no-entrypoint"] }
spl-governance-tools = { path="../../solana-program-library/governance/tools", version = "0.1.2" }
spl-governance-addin-api = { path="../../solana-program-library/governance/addin-api", version = "0.1.1" }
arbitrary = { version = "0.4", features = ["derive"], optional = true }

[dev-dependencies]
solana-sdk = "1.14.7"
solana-program-test = "1.14.7"
tokio = { version = "1.0", features = ["macros"]}
hex = "0.4"

[lib]
crate-type = ["cdylib", "lib"]
